# SBRS

./: .gitignore  .pylintrc  Makefile  README.md  __init__.py  action.py  basic_game_behavior.py  config-classic.json  config-modern.json  load_functions.py  player.py  players.txt  playertypes.txt  pyproject.toml  sbrs.py  sbrs_config.py  team.py  version.py
.github/workflows/: python-app.yml
src/: action.py  basic_game_behavior.py  load_functions.py  messages.json  player.py  sbrs.py  sbrs_config.py  team.py  version.py
tests/: __init__.py  test_config.py  test_fullgame.py  test_turnsimulation.py
tests/configs/: config-test_malformed.json  config-test_missing_options.json  config-test_normal.json  config-test_stresstest.json  config-test_teams.json
tests/players/: players-stresstest.txt  players-test.txt  teams-test.txt
