# Project information
[project]
name = "sbrs"
description = "Starlii's Battle Royale Simulator (Python rewrite)"
readme = "README.md"
license = { file = "LICENSE" }
dynamic = ["version"]
authors = [
    { name = "Starlii10", email = "starliithestarbot@gmail.com" }
]

requires-python = ">=3.12"

dependencies = [
    "colorama"
]

[project.urls]
repository = "https://github.com/Starlii10/sbrs"

# Setuptools configuration
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

# Pytest configuration
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
